--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 <p>concentrater, <em>reader</em>, <strong>creative writer</strong>.</p>
 
+<h2>Favorite Foods</h2>
+
+
 <p><a href="krjohnstone@hotmail.com">email</a></p>
 
 <h3>Three Favorite Sites</h3>
